--- a/pyproject.toml
+++ b/pyproject.toml
@@ -21,6 +21,7 @@ authors = [
     { name="Maximos Nikiforakis", email="nikiforos@live.co.uk" },
 ]
 description = "Utilities for programming that involves physical properties"
+keywords = ["physical properties", "properties"]
 readme = "README.md"
 license = {text = "MIT"}
 requires-python = ">=3.8"
@@ -32,12 +33,16 @@ classifiers = [
     "Programming Language :: Python :: 3.10",
     "Programming Language :: Python :: 3.11",
     "Programming Language :: Python :: 3.12",
-    "Intended Audience :: Developers",
+    "Intended Audience :: Science/Research",
+    "Natural Language :: English",
     "License :: OSI Approved :: MIT License",
     "Operating System :: OS Independent",
     "Topic :: Scientific/Engineering :: Chemistry",
     "Topic :: Scientific/Engineering :: Physics",
 ]
+
+[project.optional-dependencies]
+dev = ["unittest-extensions"]
 
 [project.urls]
 Homepage = "https://github.com/Maxcode123/property-utils"
