--- a/pyproject.toml
+++ b/pyproject.toml
@@ -25,6 +25,9 @@ keywords = ["physical properties", "properties"]
 readme = "README.md"
 license = {text = "MIT"}
 requires-python = ">=3.8"
+dependencies = [
+    "typing-extensions",
+]
 classifiers = [
     "Programming Language :: Python",
     "Programming Language :: Python :: 3",
