--- a/.github/workflows/type-check-package.yml
+++ b/.github/workflows/type-check-package.yml
@@ -4,7 +4,7 @@ on:
   workflow_call:
   workflow_dispatch:
   push:
-    branches: ["main", "feature/*"]
+    branches: ["main", "tester/*"]
   pull_request:
     branches: ["main"]
 
