--- a/.github/workflows/test-package.yml
+++ b/.github/workflows/test-package.yml
@@ -69,10 +69,10 @@ jobs:
 
           - name: "macos-python-3-8"
             python-version: "3.8"
-            os: macos-latest
+            os: macos-13
           - name: "macos-python-3-9"
             python-version: "3.9"
-            os: macos-latest
+            os: macos-13
           - name: "macos-python-3-10"
             python-version: "3.10"
             os: macos-latest
